Revert "Merge branch 'branch-delete-multiple' of https://github.com/seanrh34/tp into branch-delete-multiple"
This reverts commit e9acba931de72b9c90c93b54ac117e8295f83b6d, reversing
changes made to d7b237ea44122e03aaf53002c36246c9dd0ff26a.